Py'nFact CHANGELOG
==================

  - 2020-03-09: Removed Javascript and added light/dark CSS styles (0.3.4)
  - 2020-03-04: Enable/disable comments by option in config file (0.3.3)
  - 2020-03-03: Converted into git repository instead of merurial^[*]
  - 2020-03-02: Existing parsed files updated only if they are different (0.3.2)
  - 2020-03-01: Categories support again (0.3.1)
  - 2020-02-29: Changed `pyatom' for `feedgen', & removed categories (0.3.0)
  - 2016-12-18: Released as v. 0.2.0 and repository regenerated
  - 2016-12-18: Categories support
  - 2015-10-22: Routine control, "cli.py" review and author updated
  - 2014-02-22: Routine control
  - 2013-06-02: Bugs fixed.
  - 2012-10-22: Initial release (v. 0.1.0)

There was no importation, no preservation of logs, or anything similar.
This is a personal project being developed just buy one person, so
there's no need to keep track of all logs, but since 2016, this is the
Hg simplified log^[*] (without changeset, author, etc.):

    date:        Tue Mar 03 12:37:29 2020 +0100
    summary:     Minor bugs and refactoring

    date:        Tue Mar 03 00:27:04 2020 +0100
    summary:     Files that haven't changed are no longer rewritten

    date:        Sun Mar 01 12:53:32 2020 +0100
    summary:     Added categories again (0.3.1)

    date:        Sat Feb 29 23:21:18 2020 +0100
    summary:     Substitution of `pyatom' (old) for `feedgen'

    date:        Wed May 24 19:36:50 2017 +0200
    summary:     Default first entry updated (extension reference)

    date:        Mon May 22 10:27:35 2017 +0200
    summary:     CSS and templates minimal update

    date:        Sun Dec 18 21:28:59 2016 +0100
    summary:     Updated 'README.md' file

    date:        Sun Dec 18 20:23:46 2016 +0000
    summary:     README.md edited online with Bitbucket (removed UTF-8 chars.)

    parent:      0:79ed6fe2633b
    date:        Sun Dec 18 20:23:02 2016 +0000