@@ -2,7 +2,7 @@ from setuptools import setup, find_packages
 
 setup(name='pynfact',
       packages=['pynfact'],
-      version='0.3.4',
+      version='0.3.5',
       author='J. A. Corbal',
       author_email='jacorbal@gmail.com',
       description='Blog-oriented static web generator',
