@@ -1,6 +1,7 @@
 Py'nFact CHANGELOG
 ==================
 
+  - 2020-03-09: Builder class constructor simplified: config. array (0.3.5)
   - 2020-03-09: Removed Javascript and added light/dark CSS styles (0.3.4)
   - 2020-03-04: Enable/disable comments by option in config file (0.3.3)
   - 2020-03-03: Converted into git repository instead of merurial^[*]
